# CPP-Project-IMS

./: CMakeLists.txt  Report.docx  main.cpp  project-proposal.docx  readme.txt
database/: products.json  stock.csv  todays_sales.csv  transactions.csv  transactions.json  users.txt
views/addproductdialog/: addproductdialog.cpp  addproductdialog.h  addproductdialog.ui
views/dashboardwindow/: dashboardwindow.cpp  dashboardwindow.h  dashboardwindow.ui
views/functions/actions/: loadproduct.cpp  onproduct_added.cpp  onproduct_delete.cpp  onproduct_edit.cpp  onproduct_update.cpp  product_search.cpp
views/functions/login/: handle_login.cpp
views/functions/read_write/: readproduct.cpp  writeproduct.cpp
views/functions/report/: report.h
views/functions/transactions/: load_transactions.cpp
views/loginwindow/: loginwindow.cpp  loginwindow.h  loginwindow.ui
views/registrationwindow/: registrationwindow.cpp  registrationwindow.h  registrationwindow.ui
